--- a/templates/service.yaml
+++ b/templates/service.yaml
@@ -5,11 +5,12 @@ metadata:
   labels:
     {{- include "k8s-core-keeper-server.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
+  type: NodePort
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    - port: 27015
+      nodePort: 30001
+      protocol: UDP
+      name: gameudp
+      targetPort: gameudp
   selector:
     {{- include "k8s-core-keeper-server.selectorLabels" . | nindent 4 }}
