--- a/templates/pvc.yaml
+++ b/templates/pvc.yaml
@@ -2,8 +2,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ include "k8s-core-keeper-server.fullname" . }}
-  # annotations:
-  #   "helm.sh/resource-policy": keep
+  annotations:
+    "helm.sh/resource-policy": keep
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
